--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,42 +1,61 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  display: flex;
+}
+
+.col-1 {
+  width: 50%;
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  padding: 4vw;
+  display: flex;
+  background: #0000EE;
+  color: #fff;
   text-align: center;
+
+  transition-duration: 2s;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.col-2 {
+  width: 50%;
+  min-height: 150vh;
+  padding: 4vw 4vw 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/* ********************************** */
+
+.projects-header {
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  padding: 25px 0;
+  border-bottom: 1px solid #000;
+  background: #fff;
+  z-index: 101;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.projects-header_text {
+  display: block;
 }
 
-.card {
-  padding: 2em;
+.project {
+  border-bottom: 5px dashed green;
+  
 }
 
-.read-the-docs {
-  color: #888;
+.project-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+.project-header_title {
+
+}
+
+.project-header_technologies {
+  padding: 0 0 0 10px;
 }
