--- a/src/app/App.css
+++ b/src/app/App.css
@@ -12,7 +12,6 @@
   background: #0000EE;
   color: #fff;
   text-align: center;
-
   transition-duration: 2s;
 }
 
@@ -58,4 +57,25 @@
 
 .project-header_technologies {
   padding: 0 0 0 10px;
+}
+
+
+/* ********************************** */
+
+
+
+.view-project_title {
+  position: absolute;
+  font-size: 5rem;
+  animation: myAnim 2s ease 0s 1 normal forwards;
+}
+
+@keyframes myAnim {
+	0% {
+		transform: translateX(0);
+	}
+
+	100% {
+		transform: translateX(100px);
+	}
 }
