--- a/src/app/App.css
+++ b/src/app/App.css
@@ -15,7 +15,9 @@ body {
   display: flex;
   text-align: center;
   transition-duration: 2s;
-  
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
 }
 
 .col-2 {
@@ -44,7 +46,7 @@ body {
 
 .project {
   border-bottom: 2px dashed grey;
-  
+  margin: 10px 0 10px 0;
 }
 
 .project-header {
@@ -110,10 +112,9 @@ body {
     width: 100%;
     min-height: 100vh;
     animation: imgAnim 2s ease 0s 1 normal forwards;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-
-
-
 
 .info-links {
   list-style-type: none;
@@ -142,3 +143,17 @@ body {
   padding: 0 10px 0 0;
 }
 
+.view-items {
+  z-index: 1;
+  width: 365px;
+
+}
+
+.view-item {
+  border: 1px solid;
+  padding: 10px;
+  margin: 5px;
+  display: -webkit-inline-box;
+  transition-duration: 0.5s;
+  border-radius: 15px;
+}
